--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-client": "^2.6.10",
-    "ra-data-hasura-graphql": "^0.1.10",
+    "graphql": "^15.4.0",
+    "graphql-ast-types-browser": "^1.0.2",
+    "graphql-tag": "^2.11.0",
+    "lodash": "^4.17.20",
+    "ra-data-graphql": "^3.10.1",
     "react": "^16.13.1",
     "react-admin": "^3.6.0",
     "react-dom": "^16.13.1",
