--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "low-code-react-admin",
+  "name": "react-admin-hasura-queries",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -51,5 +51,7 @@
     "hooks": {
       "pre-commit": "pretty-quick --staged"
     }
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
